# autonotion

./: .flake8  .gitignore  LICENSE  client.py  pyproject.toml
autonotion/: base.py  client.py
autonotion/builder/: __init__.py  database.py
autonotion/filters/: __init__.py  base.py  compound.py  database.py
autonotion/models/: __init__.py  base.py  blocks.py  builder.py  database.py  objects.py  pages.py  parents.py  properties.py
autonotion/models/builder/: page.py  properties.py  utils.py
models/: pages.py  properties.py
tests/builder/: conftest.py  test_database_builder.py  test_page_builder.py  test_property_builder.py
tests/data/: database.json  page.json
tests/filters/: test_compound_filter.py  test_notion_filter.py
