[tool.poetry]
name = "autonotion"
version = "0.1.0"
description = ""
authors = ["Luis Moncaris <lmoncarisg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
