[tool.poetry]
name = "autonotion"
version = "0.1.0"
description = ""
authors = ["Luis Moncaris <lmoncarisg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
coverage = "^6.2"
pytest-cov = "^3.0.0"
poethepoet = "^0.11.0"

[tool.flake8]
max-line-length = 99

[tool.poe.tasks]
test   = "pytest --cov=autonotion --cov-report html"
serve-cov = "cd htmlcov && python -m http.server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
